--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-clock": "^6.0.0",
     "react-dom": "^19.0.0",
     "react-time-picker": "^7.0.0",
     "tailwind-merge": "^3.2.0"
