--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-clock": "^6.0.0",
     "react-dom": "^19.0.0",
