--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-clock": "^6.0.0",
