--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.11",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-clock": "^6.0.0",
     "react-dom": "^19.0.0",
