--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-clock": "^6.0.0",
     "react-dom": "^19.0.0",
     "react-time-picker": "^7.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "twilio": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
